cbits/skia_capi/sk_types.h

typedef intptr_t gr_vk_backendmemory_t;
typedef struct {
    uint64_t fMemory;
    uint64_t fOffset;
    uint64_t fSize;
    uint32_t fFlags;
    gr_vk_backendmemory_t fBackendMemory;
    bool _private_fUsesSystemHeap;
} gr_vk_alloc_t;
typedef struct {
    uint32_t fFormat;
    uint64_t fExternalFormat;
    uint32_t fYcbcrModel;
    uint32_t fYcbcrRange;
    uint32_t fXChromaOffset;
    uint32_t fYChromaOffset;
    uint32_t fChromaFilter;
    uint32_t fForceExplicitReconstruction;
    uint32_t fFormatFeatures;
} gr_vk_ycbcrconversioninfo_t;
typedef struct {
    uint64_t fImage;
    gr_vk_alloc_t fAlloc;
    uint32_t fImageTiling;
    uint32_t fImageLayout;
    uint32_t fFormat;
    uint32_t fImageUsageFlags;
    uint32_t fSampleCount;
    uint32_t fLevelCount;
    uint32_t fCurrentQueueFamily;
    bool fProtected;
    gr_vk_ycbcrconversioninfo_t fYcbcrConversionInfo;
    uint32_t fSharingMode;
} gr_vk_imageinfo_t;
typedef struct {
    const void* fTexture;
} gr_mtl_textureinfo_t;
typedef struct d3d_dxgi_adapter_t d3d_dxgi_adapter_t;
typedef struct d3d_d12_device_t d3d_d12_device_t;
typedef struct d3d_d12_command_queue_t d3d_d12_command_queue_t;
typedef struct gr_d3d_memory_allocator_t gr_d3d_memory_allocator_t;
typedef struct {
  d3d_dxgi_adapter_t* fAdapter;
  d3d_d12_device_t* fDevice;
  d3d_d12_command_queue_t* fQueue;
  gr_d3d_memory_allocator_t* fMemoryAllocator;
  bool fProtectedContext;
} gr_d3d_backendcontext_t;