src/Skia/Bindings/Types.hsc


@
typedef struct 
{
  uint32_t fFormat;
  uint64_t fExternalFormat;
  uint32_t fYcbcrModel;
  uint32_t fYcbcrRange;
  uint32_t fXChromaOffset;
  uint32_t fYChromaOffset;
  uint32_t fChromaFilter;
  uint32_t fForceExplicitReconstruction;
  uint32_t fFormatFeatures;
} gr_vk_ycbcrconversioninfo_t
@
-}
data Gr_vk_ycbcrconversioninfo = Gr_vk_ycbcrconversioninfo
  { fFormat :: Word32 -- ^ C field: @"uint32_t fFormat"@
  , fExternalFormat :: Word64 -- ^ C field: @"uint64_t fExternalFormat"@
  , fYcbcrModel :: Word32 -- ^ C field: @"uint32_t fYcbcrModel"@
  , fYcbcrRange :: Word32 -- ^ C field: @"uint32_t fYcbcrRange"@
  , fXChromaOffset :: Word32 -- ^ C field: @"uint32_t fXChromaOffset"@
  , fYChromaOffset :: Word32 -- ^ C field: @"uint32_t fYChromaOffset"@
  , fChromaFilter :: Word32 -- ^ C field: @"uint32_t fChromaFilter"@
  , fForceExplicitReconstruction :: Word32 -- ^ C field: @"uint32_t fForceExplicitReconstruction"@
  , fFormatFeatures :: Word32 -- ^ C field: @"uint32_t fFormatFeatures"@
  }
instance Foreign.Storable.Offset.Offset "fFormat" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fFormat)
instance Foreign.Storable.Offset.Offset "fExternalFormat" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fExternalFormat)
instance Foreign.Storable.Offset.Offset "fYcbcrModel" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fYcbcrModel)
instance Foreign.Storable.Offset.Offset "fYcbcrRange" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fYcbcrRange)
instance Foreign.Storable.Offset.Offset "fXChromaOffset" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fXChromaOffset)
instance Foreign.Storable.Offset.Offset "fYChromaOffset" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fYChromaOffset)
instance Foreign.Storable.Offset.Offset "fChromaFilter" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fChromaFilter)
instance Foreign.Storable.Offset.Offset "fForceExplicitReconstruction" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fForceExplicitReconstruction)
instance Foreign.Storable.Offset.Offset "fFormatFeatures" Gr_vk_ycbcrconversioninfo where
  rawOffset = (#offset gr_vk_ycbcrconversioninfo_t, fFormatFeatures)
instance Foreign.Storable.Storable Gr_vk_ycbcrconversioninfo where
  sizeOf _ = (#size gr_vk_ycbcrconversioninfo_t)
  alignment _ = (#alignment gr_vk_ycbcrconversioninfo_t)
  peek p' = do
    fFormat <- (#peek gr_vk_ycbcrconversioninfo_t, fFormat) p'
    fExternalFormat <- (#peek gr_vk_ycbcrconversioninfo_t, fExternalFormat) p'
    fYcbcrModel <- (#peek gr_vk_ycbcrconversioninfo_t, fYcbcrModel) p'
    fYcbcrRange <- (#peek gr_vk_ycbcrconversioninfo_t, fYcbcrRange) p'
    fXChromaOffset <- (#peek gr_vk_ycbcrconversioninfo_t, fXChromaOffset) p'
    fYChromaOffset <- (#peek gr_vk_ycbcrconversioninfo_t, fYChromaOffset) p'
    fChromaFilter <- (#peek gr_vk_ycbcrconversioninfo_t, fChromaFilter) p'
    fForceExplicitReconstruction <- (#peek gr_vk_ycbcrconversioninfo_t, fForceExplicitReconstruction) p'
    fFormatFeatures <- (#peek gr_vk_ycbcrconversioninfo_t, fFormatFeatures) p'
    pure Gr_vk_ycbcrconversioninfo{..}
  poke p' Gr_vk_ycbcrconversioninfo{..} = do
    (#poke gr_vk_ycbcrconversioninfo_t, fFormat) p' fFormat
    (#poke gr_vk_ycbcrconversioninfo_t, fExternalFormat) p' fExternalFormat
    (#poke gr_vk_ycbcrconversioninfo_t, fYcbcrModel) p' fYcbcrModel
    (#poke gr_vk_ycbcrconversioninfo_t, fYcbcrRange) p' fYcbcrRange
    (#poke gr_vk_ycbcrconversioninfo_t, fXChromaOffset) p' fXChromaOffset
    (#poke gr_vk_ycbcrconversioninfo_t, fYChromaOffset) p' fYChromaOffset
    (#poke gr_vk_ycbcrconversioninfo_t, fChromaFilter) p' fChromaFilter
    (#poke gr_vk_ycbcrconversioninfo_t, fForceExplicitReconstruction) p' fForceExplicitReconstruction
    (#poke gr_vk_ycbcrconversioninfo_t, fFormatFeatures) p' fFormatFeatures

{- | C struct: @"gr_vk_imageinfo_t"@

@
typedef struct 
{
  uint64_t fImage;
  gr_vk_alloc_t fAlloc;
  uint32_t fImageTiling;
  uint32_t fImageLayout;
  uint32_t fFormat;
  uint32_t fImageUsageFlags;
  uint32_t fSampleCount;
  uint32_t fLevelCount;
  uint32_t fCurrentQueueFamily;
  _Bool fProtected;
  gr_vk_ycbcrconversioninfo_t fYcbcrConversionInfo;
  uint32_t fSharingMode;
} gr_vk_imageinfo_t
@
-}
data Gr_vk_imageinfo = Gr_vk_imageinfo
  { fImage :: Word64 -- ^ C field: @"uint64_t fImage"@
  , fAlloc :: Gr_vk_alloc -- ^ C field: @"gr_vk_alloc_t fAlloc"@
  , fImageTiling :: Word32 -- ^ C field: @"uint32_t fImageTiling"@
  , fImageLayout :: Word32 -- ^ C field: @"uint32_t fImageLayout"@
  , fFormat :: Word32 -- ^ C field: @"uint32_t fFormat"@
  , fImageUsageFlags :: Word32 -- ^ C field: @"uint32_t fImageUsageFlags"@
  , fSampleCount :: Word32 -- ^ C field: @"uint32_t fSampleCount"@
  , fLevelCount :: Word32 -- ^ C field: @"uint32_t fLevelCount"@
  , fCurrentQueueFamily :: Word32 -- ^ C field: @"uint32_t fCurrentQueueFamily"@
  , fProtected :: CBool -- ^ C field: @"_Bool fProtected"@
  , fYcbcrConversionInfo :: Gr_vk_ycbcrconversioninfo -- ^ C field: @"gr_vk_ycbcrconversioninfo_t fYcbcrConversionInfo"@
  , fSharingMode :: Word32 -- ^ C field: @"uint32_t fSharingMode"@
  }
instance Foreign.Storable.Offset.Offset "fImage" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fImage)
instance Foreign.Storable.Offset.Offset "fAlloc" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fAlloc)
instance Foreign.Storable.Offset.Offset "fImageTiling" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fImageTiling)
instance Foreign.Storable.Offset.Offset "fImageLayout" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fImageLayout)
instance Foreign.Storable.Offset.Offset "fFormat" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fFormat)
instance Foreign.Storable.Offset.Offset "fImageUsageFlags" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fImageUsageFlags)
instance Foreign.Storable.Offset.Offset "fSampleCount" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fSampleCount)
instance Foreign.Storable.Offset.Offset "fLevelCount" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fLevelCount)
instance Foreign.Storable.Offset.Offset "fCurrentQueueFamily" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fCurrentQueueFamily)
instance Foreign.Storable.Offset.Offset "fProtected" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fProtected)
instance Foreign.Storable.Offset.Offset "fYcbcrConversionInfo" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fYcbcrConversionInfo)
instance Foreign.Storable.Offset.Offset "fSharingMode" Gr_vk_imageinfo where
  rawOffset = (#offset gr_vk_imageinfo_t, fSharingMode)
instance Foreign.Storable.Storable Gr_vk_imageinfo where
  sizeOf _ = (#size gr_vk_imageinfo_t)
  alignment _ = (#alignment gr_vk_imageinfo_t)
  peek p' = do
    fImage <- (#peek gr_vk_imageinfo_t, fImage) p'
    fAlloc <- (#peek gr_vk_imageinfo_t, fAlloc) p'
    fImageTiling <- (#peek gr_vk_imageinfo_t, fImageTiling) p'
    fImageLayout <- (#peek gr_vk_imageinfo_t, fImageLayout) p'
    fFormat <- (#peek gr_vk_imageinfo_t, fFormat) p'
    fImageUsageFlags <- (#peek gr_vk_imageinfo_t, fImageUsageFlags) p'
    fSampleCount <- (#peek gr_vk_imageinfo_t, fSampleCount) p'
    fLevelCount <- (#peek gr_vk_imageinfo_t, fLevelCount) p'
    fCurrentQueueFamily <- (#peek gr_vk_imageinfo_t, fCurrentQueueFamily) p'
    fProtected <- (#peek gr_vk_imageinfo_t, fProtected) p'
    fYcbcrConversionInfo <- (#peek gr_vk_imageinfo_t, fYcbcrConversionInfo) p'
    fSharingMode <- (#peek gr_vk_imageinfo_t, fSharingMode) p'
    pure Gr_vk_imageinfo{..}
  poke p' Gr_vk_imageinfo{..} = do
    (#poke gr_vk_imageinfo_t, fImage) p' fImage
    (#poke gr_vk_imageinfo_t, fAlloc) p' fAlloc
    (#poke gr_vk_imageinfo_t, fImageTiling) p' fImageTiling
    (#poke gr_vk_imageinfo_t, fImageLayout) p' fImageLayout
    (#poke gr_vk_imageinfo_t, fFormat) p' fFormat
    (#poke gr_vk_imageinfo_t, fImageUsageFlags) p' fImageUsageFlags
    (#poke gr_vk_imageinfo_t, fSampleCount) p' fSampleCount
    (#poke gr_vk_imageinfo_t, fLevelCount) p' fLevelCount
    (#poke gr_vk_imageinfo_t, fCurrentQueueFamily) p' fCurrentQueueFamily
    (#poke gr_vk_imageinfo_t, fProtected) p' fProtected
    (#poke gr_vk_imageinfo_t, fYcbcrConversionInfo) p' fYcbcrConversionInfo
    (#poke gr_vk_imageinfo_t, fSharingMode) p' fSharingMode

{- | C struct: @"gr_mtl_textureinfo_t"@

@
typedef struct 
{
  const void *fTexture;
} gr_mtl_textureinfo_t
@
-}
data Gr_mtl_textureinfo = Gr_mtl_textureinfo
  { fTexture :: Ptr (()) -- ^ C field: @"const void *fTexture"@
  }
instance Foreign.Storable.Offset.Offset "fTexture" Gr_mtl_textureinfo where
  rawOffset = (#offset gr_mtl_textureinfo_t, fTexture)
instance Foreign.Storable.Storable Gr_mtl_textureinfo where
  sizeOf _ = (#size gr_mtl_textureinfo_t)
  alignment _ = (#alignment gr_mtl_textureinfo_t)
  peek p' = do
    fTexture <- (#peek gr_mtl_textureinfo_t, fTexture) p'
    pure Gr_mtl_textureinfo{..}
  poke p' Gr_mtl_textureinfo{..} = do
    (#poke gr_mtl_textureinfo_t, fTexture) p' fTexture

{- | Opaque C struct: @"d3d_dxgi_adapter_t"@
-}
data D3d_dxgi_adapter = D3d_dxgi_adapter

{- | Opaque C struct: @"d3d_d12_device_t"@
-}
data D3d_d12_device = D3d_d12_device

{- | Opaque C struct: @"d3d_d12_command_queue_t"@
-}
data D3d_d12_command_queue = D3d_d12_command_queue

{- | Opaque C struct: @"gr_d3d_memory_allocator_t"@
-}
data Gr_d3d_memory_allocator = Gr_d3d_memory_allocator

{- | C struct: @"gr_d3d_backendcontext_t"@
